apps/homeassistant/overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  type: ExternalName
  externalName: homeassistant
  ports:
    - port: 8123
